Little changes in index.html
Little changes in index.html

--- a/src/main/frontend/public/index.html
+++ b/src/main/frontend/public/index.html
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-6rh4LErjM96t6CVB8YZHIIaGEvxk3BI"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOURAPIKEY"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
